--- a/specksStyle.css
+++ b/specksStyle.css
@@ -8,13 +8,13 @@ body {
     left: 250px;
     top: 10px;
     margin: 0px;
-    font: 80px monospace;
-    color: #C71585;
-    text-shadow: 1px 1px 2px black, 0 0 1em #800080;
+    font: 80px fantasy;
+    color: #de4300;
+    text-shadow: 1px 1px 10px black, 0 0 1em #010a7d;
 }
  
 
-    #table {
+    #tableSpecks {
       top: 100px;
       left: 100px;
       background-color: #F0E68C;
@@ -26,12 +26,12 @@ body {
       border-right: 25px solid #CD853F;
       border-bottom: 25px solid #CD853F;
       border-left: 25px solid #A0522D;
-      font: 50px monospace;
+      font: 50px fantasy;
       font-weight: 900;
       box-shadow: 0.4em 0.4em 5px rgba(122,122,122,0.5);
     }
 
-    td {
+    .cellSpecks {
         background-color: #FAFAD2;
         border-radius: 15px;
         width: 80px;
@@ -42,8 +42,10 @@ body {
         box-shadow: inset 0 0 10px;
     }
 
+
 #newGameButton {
    position: absolute;
+   border: 3px solid black;
    border-radius: 40px;
    background-color: #32CD32;
    left: 10px;
@@ -51,14 +53,99 @@ body {
    width: 110px;
    height: 80px;
    font-weight: 900;
-   box-shadow: inset 0 0 30px;
+   box-shadow: inset 0 0 30px #000;
 }
 
 #movesNum {
     position: relative;
     top: 100px;
     left: 150px;
-    font: 30px monospace;
+    font: 40px cursive;
     font-weight: 900;
 
+}
+
+#pName {
+    position: absolute;
+    top: 0px;
+    left: 670px;
+    font: 30px cursive;
+}
+
+#inputName {
+    background-color: #b3b2b1;
+    color: white;
+    border-radius: 10px;
+    font: 25px cursive;
+    width: 200px;
+}
+
+
+#tScore {
+    position: absolute;
+    top: 180px;
+    left: 670px;
+    font: 30px cursive;
+    border-collapse: collapse;
+}
+
+#dScore {
+    position: absolute;
+    top: 110px;
+    left: 670px;
+    font: 40px cursive;
+    font-weight: 900;
+}
+
+.numScore {
+    width: 40px;
+    height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid black;
+}
+
+.nameScore {
+    width: 80px;
+    height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid black;
+}
+
+#win {
+    display: none;
+    position: fixed;
+    top: 200px;
+    left: 50px;
+    text-align: center;
+    font-size: 8.5em;
+    color: 	#fff;
+    letter-spacing: -7px;
+    font-weight: 900;
+    text-transform: uppercase;
+    animation: blur .9s ease-out infinite;
+    text-shadow: 0px 0px 5px #FFf, 0px 0px 7px #FFf;
+}
+@keyframes blur {
+  from {
+    text-shadow:0px 0px 10px #FFf,
+      0px 0px 10px #fff, 
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 50px #fff,
+      0px 0px 50px #fff,
+      0px 0px 50px #7B96B8,
+      0px 0px 150px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px -10px 100px #7B96B8,
+      0px -10px 100px #7B96B8;
+  }
 }
